--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,8 @@
     <body>
 
       <div class="page-header">
-        <h1><a href="/">Django Girls Blog</a></h1>
+        <h1><a href="{% url "blog.views.post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a></h1>
+          <h1><a href="#"> Django Girls Blog </a></h1>
       </div>
 
       <div class="content container">
